// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Rubric component hides the score total when needed 1`] = `
"<div className=\\"react-rubric\\" style={{...}}>
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\" className={[undefined]}>
          Criteria
        </th>
        <th scope=\\"col\\" className=\\"ratings\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
    </tbody>
  </Table>
</div>"
`;

exports[`the Rubric component renders as expected 1`] = `
"<div className=\\"react-rubric\\" style={{...}}>
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\" className={[undefined]}>
          Criteria
        </th>
        <th scope=\\"col\\" className=\\"ratings\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <tr>
        <td colSpan=\\"3\\">
          <Flex justifyItems=\\"end\\" as=\\"span\\" direction=\\"row\\" alignItems=\\"center\\" inline={false} visualDebug={false} wrapItems={false}>
            <FlexItem data-selenium=\\"rubric_total\\" as=\\"span\\" grow={false} shrink={false}>
              Total Points: 6
            </FlexItem>
          </Flex>
        </td>
      </tr>
    </tbody>
  </Table>
</div>"
`;

exports[`the Rubric component renders properly with no assessment 1`] = `
"<div className=\\"react-rubric\\" style={{...}}>
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\" className={[undefined]}>
          Criteria
        </th>
        <th scope=\\"col\\" className=\\"ratings\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={{...}} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <tr>
        <td colSpan=\\"3\\">
          <Flex justifyItems=\\"end\\" as=\\"span\\" direction=\\"row\\" alignItems=\\"center\\" inline={false} visualDebug={false} wrapItems={false}>
            <FlexItem data-selenium=\\"rubric_total\\" as=\\"span\\" grow={false} shrink={false}>
              Total Points: 11
            </FlexItem>
          </Flex>
        </td>
      </tr>
    </tbody>
  </Table>
</div>"
`;

exports[`the Rubric component updates the total score when an individual criterion point assessment changes 1`] = `
"<div className=\\"react-rubric\\" style={{...}}>
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\" className={[undefined]}>
          Criteria
        </th>
        <th scope=\\"col\\" className=\\"ratings\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={[Function]} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <Criterion allowExtraCredit={false} assessment={{...}} criterion={{...}} customRatings={{...}} freeForm={false} isSummary={false} onAssessmentChange={[Function]} savedComments={{...}} hidePoints={false} hasPointsColumn={true} />
      <tr>
        <td colSpan=\\"3\\">
          <Flex justifyItems=\\"end\\" as=\\"span\\" direction=\\"row\\" alignItems=\\"center\\" inline={false} visualDebug={false} wrapItems={false}>
            <FlexItem data-selenium=\\"rubric_total\\" as=\\"span\\" grow={false} shrink={false}>
              Total Points: 5 out of 11
            </FlexItem>
          </Flex>
        </td>
      </tr>
    </tbody>
  </Table>
</div>"
`;
